@@ -563,6 +563,10 @@ PACKAGE {
     RETURN_TOKEN(TOK_PACKAGE);
 }
 
+LIMIT {
+    RETURN_TOKEN(TOK_LIMIT);
+}
+
 \|\| {
     RETURN_TOKEN(TOK_CONCAT);
 }
