@@ -42,7 +42,7 @@ int RDB_parse_tokens[] = {
     TOK_FOR, TOK_FROM, TOK_GROUP,
     TOK_IF, TOK_IMPLEMENT, TOK_IN, TOK_INDEX, TOK_INIT, TOK_INSERT,
     TOK_INTERSECT, TOK_IS, TOK_I_DELETE, TOK_JOIN, TOK_KEY, TOK_LEAVE,
-    TOK_LIKE, TOK_LOAD, TOK_MAX, TOK_MATCHING,
+    TOK_LIKE, TOK_LIMIT, TOK_LOAD, TOK_MAX, TOK_MATCHING,
     TOK_MIN, TOK_MINUS, TOK_NOT, TOK_OPERATOR, TOK_OR,
     TOK_ORDER, TOK_ORDERED, TOK_PACKAGE, TOK_PER,
     TOK_POSSREP, TOK_PRIVATE, TOK_RAISE, TOK_REAL, TOK_REGEX_LIKE,
